# Oxbumpy

./: README.md  pyproject.toml
oxbumpy/: display.py  interface.py  oxbumpy.py
